<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center_horizontal">

        <!-- Title with purple accent color -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_medical_therapy"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="16dp" />

        <!-- Introduction -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_intro"
                android:textSize="16sp"
                android:layout_marginBottom="24dp" />

        <!-- Investigation List 1 -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_1_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="8dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_1_text"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_1_extra"
                android:padding="6dp"

                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />

        <!-- Investigation List 2 -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_2_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="8dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicaL_therapy_list_2_text"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_2_extra"
                android:padding="6dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="16dp" />

        <!-- Investigation List 3 -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_3_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="8dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_3_text"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />

        <!-- Investigation List 4 -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_4_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="8dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_4_text"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_5_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="8dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_5_text"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_therapy_list_5_extra"
                android:padding="6dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="16dp" />

        <Button
                android:id="@+id/medical_therapy_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/menu_main" />

    </LinearLayout>
</ScrollView>
