<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="32dp" />

    <Button
            android:id="@+id/menu_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/menu_about"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center" />

    <Button
            android:id="@+id/menu_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/menu_history"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center" />

    <Button
            android:id="@+id/menu_physical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/menu_physical_exam"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center" />

    <Button
            android:id="@+id/menu_investigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/menu_investigation"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center" />

    <Button
            android:id="@+id/menu_optional_investigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/menu_optional_investigation"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/author" />

</LinearLayout>
