<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="center_horizontal">

    <!-- Title -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="16dp" />

    <!-- About Section Text 1 -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text_luts"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"
            android:textAlignment="center" />

    <!-- About Section Text 2 -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text_bph"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center" />

    <!-- Main Menu Button -->
    <Button
            android:id="@+id/about_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_main"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

</LinearLayout>
