<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/menu_physical_exam" />

        <!--        <TextView-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="@string/physical_intro" />-->

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/physical_list_1_title" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/physical_list_1_text"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="6dp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/physical_list_2_title" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/physical_list_2_text"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="6dp" />

            <TableLayout
                    android:id="@+id/table_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:padding="8dp"
                    android:background="#FFFFFF"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:divider="@android:color/darker_gray"
                    android:dividerPadding="1dp" />
        </LinearLayout>

        <Button
                android:id="@+id/physical_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/menu_main" />
    </LinearLayout>

</ScrollView>