<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center_horizontal">

        <!-- Title with purple accent color -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_surgical_intervention"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="16dp" />

        <!-- Introduction -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surgical_intervention_intro"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginBottom="24dp" />

        <ListView
                android:id="@+id/surgical_intervention_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="3dp"
                android:scrollbars="none"
                android:nestedScrollingEnabled="true" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/surgical_intervention_outro"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginBottom="24dp" />


        <Button
                android:id="@+id/surgical_intervention_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/menu_main" />

    </LinearLayout>
</ScrollView>
